--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <link rel="icon" type="image/x-icon" href="css\logo-vlad.png">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+    <header class="header">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img src="css\logo-vlad.png" alt="" width="100px"
@@ -79,9 +80,9 @@
         </div>
       </div>
     </nav>
-
+  </header>
     <!--Title-->
-    <section id="title">
+    <section class ="section" id="title">
       <div class="title-description">
         <h1>HEY, I'M VLAD ALEXA</h1>
         <h2>
@@ -97,7 +98,7 @@
     </section>
 
     <!--About-->
-    <section id="about-me">
+    <section class ="section" id="about-me">
       <div class="about--me">
         <div class="about-me--title">
           <h1>ABOUT ME</h1>
@@ -156,7 +157,7 @@
         </div>
       </div>
     </section>
-    <section id="my-projects">
+    <section class ="section" id="my-projects">
       <h1>My Recent Work</h1>
       <h3>Here are a few design projects I've worked on.</h3>
 
@@ -236,7 +237,7 @@
         </div>
       </div>
     </section>
-    <section id="contact--me">
+    <section class ="section" id="contact--me">
     
       <div class="contact--title">
         <h1>CONTACT</h1>
@@ -290,7 +291,7 @@
         </div>
       </div>
     </section>
-    <div class="project--start">
+    <div  class="project--start section">
       <div class="row g-10">
         <div class="col-lg-4 col-md-12 project--title">
           <div class="project--start-title"><h1>Start a project</h1></div>
@@ -306,7 +307,7 @@
         </div>
       </div>
     </div>
-    <footer id="footer--zone">
+    <footer class ="section" id="footer--zone">
       <div class="footer--logo">
         <img
           class=""
